# yarp-device-voicebox

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: conda-ci.yml
src/devices/: CMakeLists.txt
src/devices/voiceBoxSynthesizer/: CMakeLists.txt  VoiceBoxSynthesizer.cpp  VoiceBoxSynthesizer.h  VoiceBoxSynthesizer_ParamsParser.cpp  VoiceBoxSynthesizer_ParamsParser.h  VoiceBoxSynthesizer_params.md
src/devices/voiceBoxSynthesizer/tests/: VoiceBoxSynthesizer_test.cpp  create_second_test_profile.sh  create_test_profile.sh
